[package]
name = "vpad_server_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.tokio]
version = "1.23.0"
features = ["full"]

[dependencies]
tokio-io = "0.1.13"
bytes = "1.3.0"
midi-control = "0.2.1"
midir = "0.8.0"
lazy_static = "1.4.0"
rand = "0.8.5"