[package]
name = "vpad_server_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.tokio]
version = "1.23.0"
features = ["full"]

[dependencies.tokio-util]
version = "0.7.4"
features = ["codec"]

[dependencies.futures-util]
version = "0.3.25"
features = ["sink"]

[dependencies]
tokio-io = "0.1.13"
bytes = "1.3.0"
midi-control = "0.2.1"
midir = "0.8.0"
lazy_static = "1.4.0"
rand = "0.8.5"
log = "0.4.8"
log4rs = "0.10.0"
dioxus = "0.3.2"
dioxus-desktop = "0.3.0"
